--- a/.github/workflows/matmek4270.yml
+++ b/.github/workflows/matmek4270.yml
@@ -2,7 +2,7 @@ name: Test MAT-MEK4270 projects
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "**" ]
   pull_request:
     branches: [ "main" ]
 
