--- a/.github/workflows/matmek4270.yml
+++ b/.github/workflows/matmek4270.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Test with pytest
       run: |
         cd projects
-        pytest decay_v3.py mesh_function.py differentiate.py
+        pytest *.py
