Moving all python files into one directory

--- a/.github/workflows/matmek4270.yml
+++ b/.github/workflows/matmek4270.yml
@@ -26,5 +26,5 @@ jobs:
         pip install pytest numpy matplotlib
     - name: Test with pytest
       run: |
-        cd projects
+        cd projects/python
         pytest *.py
